courses/430_programming-languages/assignment-6/tests/error/hw4_error24.nex
print "should not get here:n";
1 / 0;
while (3) { }
